# ProjectRays

./: .gitignore  CMakeLists.txt  ProjectRays.sln
CMake/: sourcegroupbyfolder.cmake
Paper/: Paper_BillietStijn_RadeonRays.aux  Paper_BillietStijn_RadeonRays.blg  Paper_BillietStijn_RadeonRays.out  Paper_BillietStijn_RadeonRays.tex  Paper_BillietStijn_RadeonRays.toc
Projects/: CMakeLists.txt
Projects/Framework/: CMakeLists.txt  Framework.vcxproj  Framework.vcxproj.filters  FrameworkPCH.cpp  FrameworkPCH.h  PropertyManager.cpp  PropertyManager.h  glad.c
Projects/Framework/Camera/: BaseCamera.cpp  BaseCamera.h
Projects/Framework/Characters/: BaseController.cpp  BaseController.h  BaseControllerState.cpp  BaseControllerState.h  BasePawn.cpp  BasePawn.h
Projects/Framework/Characters/Player/: BasePlayerController.cpp  BasePlayerController.h  BasePlayerState.cpp  BasePlayerState.h
Projects/Framework/Components/: BaseComponent.cpp  BaseComponent.h  CameraComponent.cpp  CameraComponent.h  Components.h  MeshComponent.cpp  MeshComponent.h  MeshDrawComponent.cpp  MeshDrawComponent.h  ObjectComponent.cpp  ObjectComponent.h  RayShapeComponent.cpp  RayShapeComponent.h  SceneComponent.cpp  SceneComponent.h  TransformComponent.cpp  TransformComponent.h
Projects/Framework/Config/: Config.h  PropertyManager.cpp  PropertyManager.h
Projects/Framework/Content/Model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h
Projects/Framework/Content/Parsers/Binary/: BinaryIO.hpp
Projects/Framework/Content/Parsers/XML/: XmlParser.h  XmlTree.h
Projects/Framework/Content/Shader/: ShaderProgram.cpp  ShaderProgram.h
Projects/Framework/Data/: Data.h  MeshData.cpp  MeshData.h  TextureData.cpp  TextureData.h
Projects/Framework/Data/Parsers/XML/: XmlParser.cpp  XmlTree.cpp
Projects/Framework/Debug/: Debug.h
Projects/Framework/Debug/Logger/: Logger.cpp  Logger.h
Projects/Framework/GUI/: Canvas.cpp  Canvas.h  GUI.h  UIElement.cpp  UIElement.h  UserInterface.cpp  UserInterface.h
Projects/Framework/GUI/Text/: FPSCounter.cpp  FPSCounter.h  TextLabel.cpp  TextLabel.h
Projects/Framework/Game/: Application.cpp  Application.h  BaseGameState.cpp  BaseGameState.h  BaseGamemode.cpp  BaseGamemode.h  Game.cpp  Game.h  GameContext.cpp  GameContext.h
Projects/Framework/Graphics/: Graphics.h  Renderer.cpp  Renderer.h
Projects/Framework/Graphics/LightManager/: LightManager.cpp  LightManager.h
Projects/Framework/Graphics/Model/: Mesh.h  Model.cpp  Model.h  Texture.cpp  Vertex.h
Projects/Framework/Graphics/RenderTarget/: RenderTarget.cpp  RenderTarget.h
Projects/Framework/Graphics/RenderTarget/OpenGL/: GLRenderTarget.cpp  GLRenderTarget.h
Projects/Framework/Graphics/Renderer/: CL_Renderer.cpp  CL_Renderer.h  GL_Renderer.cpp  GL_Renderer.h  Renderer.cpp  Renderer.h
Projects/Framework/Graphics/Renderer/OpenGL/: GLRenderer.cpp  GLRenderer.h
Projects/Framework/Graphics/Shader/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
Projects/Framework/Graphics/Window/: Window.cpp  Window.h
Projects/Framework/Graphics/Window/OpenGL/: GLWindow.cpp  GLWindow.h
Projects/Framework/Helpers/: Helpers.h  Safedelete.h
Projects/Framework/ImGUI/: imgui.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h
Projects/Framework/Input/: Input.h  InputManager.cpp  InputManager.h
Projects/Framework/Patterns/: BaseObject.cpp  BaseObject.h  Command.cpp  Command.h  Event.h  Observer.cpp  Observer.h  ParentObject.h  SingleInstance.h  Singleton.h  Subject.cpp  Subject.h
Projects/Framework/Scenegraph/: BasePanel.cpp  BasePanel.h  BasePanelManager.cpp  BasePanelManager.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Scenegraph.h
Projects/Game/: CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters  GamePCH.cpp  GamePCH.h  imgui.ini  main.cpp
Projects/Game/Gamemode/: GMSandbox.cpp  GMSandbox.h  InputActions.cpp  InputActions.h  InputActions.hpp
Projects/Game/Scenes/: RenderTestScene.cpp  RenderTestScene.h  ShadowTestScene.cpp  ShadowTestScene.h  SponzaScene.cpp  SponzaScene.h
(+22 files in other folders)
